--- a/pyfpdb/logging.conf
+++ b/pyfpdb/logging.conf
@@ -30,7 +30,7 @@ qualname=logview
 propagate=0
 
 [logger_parser]
-level=INFO
+level=DEBUG
 handlers=consoleHandler,rotatingFileHandler
 qualname=parser
 propagate=0
